--- a/.vscode/makefile
+++ b/.vscode/makefile
@@ -5,20 +5,17 @@ VPATH = ./src
 INCS = -I./include \
 	-I../windex/include \
 	-I../raven-set \
-	-I../../code_ext/boost/boost1_78 
+	-I../boost/boost1_78 
 
 LIBS = \
-	-lgdiplus -lgdi32 -lcomdlg32 -lstdc++fs \
-	-L../../code_ext/boost/boost1_78/lib \
-		-lboost_system-mgw11-mt-x64-1_78 \
-		-lboost_program_options-mgw11-mt-x64-1_78 \
-		# -lboost_thread-mgw11-mt-x64-1_7 \
-	#-mwindows
+	-lgdiplus -lgdi32 -lcomdlg32 -lstdc++fs -lComctl32 \
 
-static_link_flags = -static-libstdc++ -static-libgcc -static -lComctl32
+
+static_link_flags = -static-libstdc++ -static-libgcc -static
 
 # folders
 ODIR = ./.vscode/obj
+RDIR = ../ravencode/pub/src
 
 OPT = -g
 CCflags = -std=c++17 $(OPT) -D_mingw_
